--- a/packages/mgt/src/components/mgt-person/mgt-person.scss
+++ b/packages/mgt/src/components/mgt-person/mgt-person.scss
@@ -20,7 +20,7 @@ $font-family: var(--font-family, var(--default-font-family));
 $font-size: var(--font-size, #{$ms-font-size-m});
 $font-weight: var(--font-weight, #{$ms-font-weight-semibold});
 $color: var(--color, #{$ms-color-neutralDark});
-$text-transform: var(text-transform, none);
+$text-transform: var(--text-transform, none);
 $presence-background-color: var(--presence-background-color, #ffffff);
 $presence-icon-color: var(--presence-icon-color, #ffffff);
 
