--- a/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-files/mgt-person-card-files.scss
+++ b/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-files/mgt-person-card-files.scss
@@ -47,6 +47,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        img {
+          height: 28px;
+          width: 28px;
+        }
       }
 
       .file__details {
