Fixed namespace build error and removed open-iconic font and icon files from the project

--- a/samples/teams-blazor-server/Pages/_Host.cshtml
+++ b/samples/teams-blazor-server/Pages/_Host.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/"
+@page "/"
 @namespace MGT_Teams_Blazor_Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
@@ -28,7 +28,7 @@
 </head>
 <body>
     <app>
-        <component type="typeof(App)" render-mode="ServerPrerendered" />
+        <component type="typeof(MGT_Teams_Blazor_Server.App)" render-mode="ServerPrerendered" />
     </app>
 
     <div id="blazor-error-ui">
