--- a/samples/teams-blazor-server/Shared/MainLayout.razor
+++ b/samples/teams-blazor-server/Shared/MainLayout.razor
@@ -1,17 +1,18 @@
-﻿@inherits LayoutComponentBase
+@namespace MGT_Teams_Blazor_Server.Shared
 
+@inherits LayoutComponentBase
 
 @*We are focussing on the Microsoft Graph Toolkit and don't need the Nav form the default Blazor sample here*@
 @*<div class="sidebar">
-    <NavMenu />
-</div>*@
+      <NavMenu />
+  </div>*@
 
 <div class="main">
-    @*<div class="top-row px-4">
+  @*<div class="top-row px-4">
         <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
     </div>*@
 
-    <div class="content px-4">
-        @Body
-    </div>
+  <div class="content px-4">
+    @Body
+  </div>
 </div>
