--- a/samples/teams-blazor-server/Shared/SurveyPrompt.razor
+++ b/samples/teams-blazor-server/Shared/SurveyPrompt.razor
@@ -1,16 +1,18 @@
-﻿<div class="alert alert-secondary mt-4" role="alert">
-    <span class="oi oi-pencil mr-2" aria-hidden="true"></span>
-    <strong>@Title</strong>
+@namespace MGT_Teams_Blazor_Server.Shared
 
-    <span class="text-nowrap">
-        Please take our
-        <a target="_blank" class="font-weight-bold" href="https://go.microsoft.com/fwlink/?linkid=2112271">brief survey</a>
-    </span>
-    and tell us what you think.
+<div class="alert alert-secondary mt-4" role="alert">
+  <span class="oi oi-pencil mr-2" aria-hidden="true"></span>
+  <strong>@Title</strong>
+
+  <span class="text-nowrap">
+    Please take our
+    <a target="_blank" class="font-weight-bold" href="https://go.microsoft.com/fwlink/?linkid=2112271">brief survey</a>
+  </span>
+  and tell us what you think.
 </div>
 
 @code {
-    // Demonstrates how a parent component can supply parameters
-    [Parameter]
-    public string Title { get; set; }
+  // Demonstrates how a parent component can supply parameters
+  [Parameter]
+  public string Title { get; set; }
 }
