--- a/samples/teams-blazor-server/_Imports.razor
+++ b/samples/teams-blazor-server/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -6,4 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using MGT_Teams_Blazor_Server
+@using MGT_Teams_Blazor_Server.Pages
 @using MGT_Teams_Blazor_Server.Shared
