accessibility: localization & rtl (#619)
* localization service and helper

* mgt-person rtl styles

* mgt-login strings and rtl

* adding localization service to components

* adding directionality to mgt-person

* case for no replacement string provided

* people-picker localization and rtl

* additional people-picker strings

* additional filtering on strings for localization in case of punctutation

* teams channel picker localization and rtl

* removing issue with strings

* updating .rtl selector

* mgt-flyout position

* mgt tasks+todo associated subcomponents rtl

* mgt-agenda ltr localize

* updated with common enums for easier selection of localized strings

* new method removing localization-service and building through LocalizationHelper

* localization new method per component

* agenda

* tasks and task base

* new person card localization

* delete tasks

* cancel task

* update name

* updating localization methods to use full string group

* new localization for mgt-login

* new method of providing strings per component

* basic per component implementation

* restore person-card

* cleanup

* localizationHelper

* new structure

* better string names

* logged out rtl css

* todo

* comments

* leftover code

* no changes needed

* updating getstrings method refactor/remove servestrings

* base component

* strings getter for todo

* leftovers

* updating directionality method

* removing importants

* update direction into baseComponent and mutationObserver updates

* cleanup

* adding rtl storybook story

* css necessary to overwrite ltr styles

* teams-channel-picker

* fixing tasks and todo rtl + strings

* scope issue mutation observer fires event now

* dot-options and task css updates

* localization addon for storybook and fix for flyout

* removing old dropdown

* handling for no strings and RTL only for accessible stories

* local

--- a/packages/mgt/src/components/mgt-agenda/mgt-agenda.scss
+++ b/packages/mgt/src/components/mgt-agenda/mgt-agenda.scss
@@ -153,3 +153,22 @@ mgt-agenda .event-attendee-loading {
   border-radius: 10px;
   margin: 0 2px 0 0;
 }
+
+[dir='rtl'] {
+  .event-location {
+    margin: 0px 4px 0px 0px;
+  }
+  .event-time-container {
+    direction: ltr;
+    margin: 18px 18px 18px 38px;
+  }
+  .event-details-container {
+    margin: 14px 0px 14px 18px;
+    .event-subject {
+      margin: 0px 0px 0px 18px;
+    }
+    .event-location-container {
+      margin: 8px 0px 0px 18px;
+    }
+  }
+}
