Fixed contact and groups in person card

--- a/packages/mgt/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt/src/components/mgt-person-card/mgt-person-card.scss
@@ -219,6 +219,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
     margin: 40px 20px;
     display: flex;
     justify-content: center;
+    height: 360px;
   }
 
   .section-host {
