Separated variables and styles in separate files

--- a/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.theme.scss
+++ b/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.theme.scss
@@ -5,7 +5,7 @@
  * -------------------------------------------------------------------------------------------
  */
 
-@import '../../styles/shared-styles.scss';
+@import '../../styles/shared-sass-variables.scss';
 
 // variables with theme colors
 $people-picker: (
