--- a/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.theme.scss
+++ b/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.theme.scss
@@ -1,4 +1,11 @@
-@import '../../styles/shared-styles.scss';
+/**
+ * -------------------------------------------------------------------------------------------
+ * Copyright (c) Microsoft Corporation.  All Rights Reserved.  Licensed under the MIT License.
+ * See License in the project root for license information.
+ * -------------------------------------------------------------------------------------------
+ */
+
+@import '../../styles/shared-sass-variables.scss';
 
 $channel-picker: (
   color: (
