Add mgt-login theme

--- a/packages/mgt-components/src/components/mgt-login/mgt-login.scss
+++ b/packages/mgt-components/src/components/mgt-login/mgt-login.scss
@@ -7,6 +7,9 @@
 
 @import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../styles/shared-styles.scss';
+@import './mgt-login.theme.scss';
+
+$color--hover: var(--color-hover, #{$commblue_primary});
 
 :host,
 mgt-login {
@@ -16,15 +19,9 @@ mgt-login {
   --height: '100%';
   --margin: 0;
   --padding: 12px 20px;
-  --color: #{$ms-color-neutralPrimary};
-  --color-hover: var(--theme-primary-color);
-  --background-color: transparent;
-  --background-color--hover: #{$ms-color-neutralLight};
-  --popup-content-background-color: white;
   --popup-command-font-size: #{$ms-font-size-s};
   --popup-command-margin: 16px 0 0;
   --popup-padding: 24px 48px 16px 24px;
-  --popup-color: #{$ms-color-neutralPrimary};
 }
 
 :host .root,
@@ -44,16 +41,16 @@ mgt-login .login-button {
   height: var(--height);
   margin: var(--margin);
   padding: var(--padding);
-  color: var(--color);
-  background-color: var(--background-color);
+  color: set-var(color, $theme-default, $login);
+  background-color: set-var(button__background-color, $theme-default, $login);
   border: none;
   cursor: pointer;
   transition: color 0.3s, background-color 0.3s;
 
   &:hover {
-    color: var(--color-hover);
-    --color: var(--color-hover);
-    background-color: var(--background-color--hover);
+    color: $color--hover;
+    --color: $color--hover;
+    background-color: set-var(button__background-color--hover, $theme-default, $login);
   }
 
   &:focus {
@@ -80,11 +77,11 @@ mgt-login .login-icon {
 :host .popup,
 mgt-login .popup {
   font-family: var(--default-font-family);
-  background: var(--popup-content-background-color);
+  background-color: set-var(popup__background-color, $theme-default, $login);
   min-width: 240px;
   z-index: 1;
-  color: var(--popup-color);
-  --color: var(--popup-color);
+  color: set-var(popup__color, $theme-default, $login);
+  --color: set-var(popup__color, $theme-default, $login);
 }
 
 :host .popup-content,
@@ -106,15 +103,15 @@ mgt-login .popup-command {
   font-family: var(--default-font-family);
   font-size: var(--popup-command-font-size);
   font-weight: var(--font-weight);
-  color: var(--theme-primary-color);
-  background-color: transparent;
+  color: #{$commblue_primary};
+  background-color: set-var(popup__background-color, $theme-default, $login);
   border: none;
   padding: 0;
   cursor: pointer;
   transition: color 0.3s;
 
   &:hover {
-    color: var(--theme-dark-color);
+    color: #{$commblue_shade20};
   }
 }
 
