--- a/packages/mgt-components/src/styles/theme.scss
+++ b/packages/mgt-components/src/styles/theme.scss
@@ -1,2 +1,3 @@
 @import '../components/mgt-people-picker/mgt-people-picker.theme.scss';
 @import '../components/mgt-teams-channel-picker/mgt-teams-channel-picker.theme.scss';
+@import '../components/mgt-login/mgt-login.theme.scss';
