Add theme for agenda

--- a/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
+++ b/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
@@ -7,13 +7,14 @@
 
 @import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../styles/shared-styles.scss';
+@import './mgt-agenda.theme.scss';
 
 :host .header,
 mgt-agenda .header {
   margin: var(--agenda-header-margin, 40px 10px 14px 10px);
   font-family: var(--default-font-family);
   font-size: var(--agenda-header-font-size, 24px);
-  color: var(--agenda-header-color, #333333);
+  color: set-var(header__color, $theme-default, $agenda);
 }
 
 :host .agenda > .group:first-child > .header,
@@ -33,7 +34,7 @@ mgt-agenda .agenda-list {
 
 :host .event,
 mgt-agenda .event {
-  background: var(--event-background, #ffffff);
+  background: set-var(event__background-color, $theme-default, $agenda);
   border: var(--event-border, solid 2px rgba(0, 0, 0, 0));
   box-shadow: var(--event-box-shadow, 0px 2px 8px rgba(0, 0, 0, 0.092));
   margin: var(--event-margin, 0px 10px 14px 10px);
@@ -62,7 +63,7 @@ mgt-agenda .narrow .event-time-container {
 :host .event-time,
 mgt-agenda .event-time {
   font-size: var(--event-time-font-size, 12px);
-  color: var(--event-time-color, #000000);
+  color: set-var(event__time__color, $theme-default, $agenda);
   font-weight: 600;
 }
 
@@ -85,7 +86,7 @@ mgt-agenda .narrow .event-details-container {
 mgt-agenda .event-subject {
   margin: 0px 18px 0px 0px;
   font-size: var(--event-subject-font-size, 19px);
-  color: var(--event-subject-color, #333333);
+  color: set-var(event__subject__color, $theme-default, $agenda);
 }
 
 :host .event-location-container,
@@ -94,11 +95,22 @@ mgt-agenda .event-location-container {
   margin: 8px 18px 0px 0px;
 }
 
+:host .event-location-icon svg,
+mgt-agenda .event-location-icon svg {
+  height: 12px;
+}
+
+:host .event-location-icon svg path,
+mgt-agenda .event-location-icon svg path {
+  stroke: set-var(event__location__color, $theme-default, $agenda);
+}
+
 :host .event-location,
 mgt-agenda .event-location {
   font-size: var(--event-location-font-size, 12px);
-  color: var(--event-location-color, #000000);
+  color: set-var(event__location__color, $theme-default, $agenda);
   margin: 0px 0px 0px 4px;
+  line-height: 17px;
 }
 
 :host .event-attendees,
